--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <section id="projects">
     <div class="card">
-      <img src="/img/pj-1/bg-1.png" alt="Expanding cards">
+      <img src="img/pj-1/bg-1.png" alt="Expanding cards">
       <div class="card-content">
         <h2 class="card-title">Expanding cards</h2>
         <a target="_blank" href="/pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
