--- a/index.html
+++ b/index.html
@@ -25,49 +25,49 @@
       <img src="img/pj-1/bg-1.png" alt="Expanding cards">
       <div class="card-content">
         <h2 class="card-title">Expanding cards</h2>
-        <a target="_blank" href="/pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/bg-2.png" alt="Progress steps">
       <div class="card-content">
         <h2 class="card-title">Progress steps</h2>
-        <a target="_blank" href="/pj-2.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-2.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/pj-3/bg-3.png" alt="Rotating navigation">
       <div class="card-content">
         <h2 class="card-title">Rotating navigation</h2>
-        <a target="_blank" href="/pj-3.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-3.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/bg-4.png" alt="Hidden search widget">
       <div class="card-content">
         <h2 class="card-title">Hidden search widget</h2>
-        <a target="_blank" href="/pj-4.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-4.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/pj-5/bg-5.png" alt="Blurry loading">
       <div class="card-content">
         <h2 class="card-title">Blurry loading</h2>
-        <a target="_blank" href="/pj-5.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-5.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/bg-6.png" alt="Scroll animation">
       <div class="card-content">
         <h2 class="card-title">Scroll animation</h2>
-        <a target="_blank" href="/pj-6.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-6.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
       <img src="img/pj-7/bg-7.png" alt="Split landing page">
       <div class="card-content">
         <h2 class="card-title">Split landing page</h2>
-        <a target="_blank" href="/pj-7.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="pj-7.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
