--- a/pj-3.html
+++ b/pj-3.html
@@ -188,7 +188,7 @@
       <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores sequi alias possimus aut consectetur vero?</h2>
       <h3>Author: Carley Doe</h3>
       <div class="image">
-        <img src="/img/pj-3/kal-visuals.jpg" alt="">
+        <img src="img/pj-3/kal-visuals.jpg" alt="">
         <span>Photo by <a href="https://unsplash.com/@kalvisuals?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">KAL VISUALS</a> on <a href="https://unsplash.com/s/photos/free?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
       </div>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae quibusdam et veniam ullam labore pariatur sint mollitia numquam provident quos reiciendis rerum accusantium cum molestias deleniti, error dolores vero.</p>
