--- a/pj-5.html
+++ b/pj-5.html
@@ -28,7 +28,7 @@
     .bg {
       height: calc(100vh + 60px);
       width: calc(100vw + 60px);
-      background: url(/img/pj-5/bg-img.jpg) no-repeat center center/cover;
+      background: url(img/pj-5/bg-img.jpg) no-repeat center center/cover;
       position: absolute;
       top: -30px;
       left: -30px;
