--- a/pj-7.html
+++ b/pj-7.html
@@ -57,11 +57,11 @@
     }
 
     .right-page {
-      background: url(/img/pj-7/photography.jpg) no-repeat center center/cover;
+      background: url(img/pj-7/photography.jpg) no-repeat center center/cover;
     }
 
     .left-page {
-      background: url(/img/pj-7/videography.jpg) no-repeat center center/cover;
+      background: url(img/pj-7/videography.jpg) no-repeat center center/cover;
     }
 
     .left-page::before,
