--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header-content">
       <h1>50 Components in 25 Days</h1>
       <p>50 small projects built using HTML5, CSS3 & JavaScript <br> without the use of frontend frameworks or libraries.</p>
-      <button class="btn">GitHub Repository</button>
+      <a target="_blank" href="https://github.com/rosgas/50components-25days" class="btn">GitHub Repository</a>
       <a href="#projects" class="arrow"><i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
       <span>Photo by <a href="https://unsplash.com/@ffstop?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Fotis Fotopoulos</a> on <a href="https://unsplash.com/s/photos/computers-programming?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     </div>
@@ -25,7 +25,7 @@
       <img src="img/pj-1/bg-1.png" alt="Expanding cards">
       <div class="card-content">
         <h2 class="card-title">Expanding cards</h2>
-        <a target="_blank" href="pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="/Expanding cards/pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
