--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img src="img/pj-1/bg-1.png" alt="Expanding cards">
       <div class="card-content">
         <h2 class="card-title">Expanding cards</h2>
-        <a target="_blank" href="/Expanding cards/pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="Expanding cards/pj-1.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
     <div class="card">
