--- a/Expanding cards/pj-1.html
+++ b/Expanding cards/pj-1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="stylesheet" href="/Expanding cards/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Accordion cards</title>
 </head>
 <body>
@@ -47,6 +47,6 @@
       </div>
     </div>
   </div>
-  <script src="/Expanding cards/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
