--- a/Expanding cards/pj-1.html
+++ b/Expanding cards/pj-1.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="stylesheet" href="style.css">
   <title>Accordion cards</title>
 </head>
 <body>
   <h1 class="main-title">Main Title</h1>
   <div class="container">
-    <div class="panel active" style="background-image:url(/img/pj-1/olga-vel.jpg)">
+    <div class="panel active" style="background-image:url(img/pj-1/olga-vel.jpg)">
       <div class="content">
         <h2 class="subtitle">Subtitle</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit quidem ducimus et voluptas laudantium animi doloribus nesciunt. Quia illum eos optio, ratione sed repellat aliquid nesciunt ipsam deleniti quod animi sit quae fuga porro amet necessitatibus quaerat, voluptatem labore pariatur sint quas nam harum laboriosam. Ut quos eos eius!</p>
@@ -25,21 +25,21 @@
         <span>Photo by <a href="https://unsplash.com/@mili_vigerova?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Milada Vigerova</a> on <a href="https://unsplash.com/s/photos/fern?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
       </div>
     </div>
-    <div class="panel" style="background-image:url(/img/pj-1/ivan-yerokhin.jpg)">
+    <div class="panel" style="background-image:url(img/pj-1/ivan-yerokhin.jpg)">
       <div class="content">
         <h2 class="subtitle">Subtitle</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit quidem ducimus et voluptas laudantium animi doloribus nesciunt. Quia illum eos optio, ratione sed repellat aliquid nesciunt ipsam deleniti quod animi sit quae fuga porro amet necessitatibus quaerat, voluptatem labore pariatur sint quas nam harum laboriosam. Ut quos eos eius!</p>
         <span>Photo by <a href="https://unsplash.com/@lerston?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ivan Yerokhin</a> on <a href="https://unsplash.com/s/photos/plants?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
       </div>
     </div>
-    <div class="panel" style="background-image:url(/img/pj-1/ricardo-gomez.jpg)">
+    <div class="panel" style="background-image:url(img/pj-1/ricardo-gomez.jpg)">
       <div class="content">
         <h2 class="subtitle">Subtitle</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit quidem ducimus et voluptas laudantium animi doloribus nesciunt. Quia illum eos optio, ratione sed repellat aliquid nesciunt ipsam deleniti quod animi sit quae fuga porro amet necessitatibus quaerat, voluptatem labore pariatur sint quas nam harum laboriosam. Ut quos eos eius!</p>
         <span>Photo by <a href="https://unsplash.com/@ripato?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Ricardo Gomez Angel</a> on <a href="https://unsplash.com/s/photos/trees?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
       </div>
     </div>
-    <div class="panel" style="background-image:url(/img/pj-1/ahmad-kadhim.jpg) ">
+    <div class="panel" style="background-image:url(img/pj-1/ahmad-kadhim.jpg) ">
       <div class="content">
         <h2 class="subtitle">Subtitle</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi reprehenderit quidem ducimus et voluptas laudantium animi doloribus nesciunt. Quia illum eos optio, ratione sed repellat aliquid nesciunt ipsam deleniti quod animi sit quae fuga porro amet necessitatibus quaerat, voluptatem labore pariatur sint quas nam harum laboriosam. Ut quos eos eius!</p>
