--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <a target="_blank" href="https://github.com/rosgas" class="gh-link"><i class="fab fa-github fa-3x"></i></a>
     <div class="header-content">
       <h1>50 Components in 25 Days</h1>
-      <p>50 small projects built using HTML5, CSS3 & JavaScript <br> without the use of frontend frameworks or libraries.</p>
+      <p>50 small projects built using HTML5, CSS3 & JavaScript without the use of frontend frameworks or libraries.</p>
       <a target="_blank" href="https://github.com/rosgas/50components-25days" class="btn">GitHub Repository</a>
       <a href="#projects" class="arrow"><i class="far fa-arrow-alt-circle-down fa-2x"></i></a>
-      <span>Photo by <a href="https://unsplash.com/@ffstop?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Fotis Fotopoulos</a> on <a href="https://unsplash.com/s/photos/computers-programming?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
     </div>
   </header>
 
@@ -77,9 +76,19 @@
         <a target="_blank" href="" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
-    
-    
   </section>
+
+  <footer>
+    <div class="footer-content">
+      <div class="footer-left">
+        <h3>50 Components in 25 days</h3>
+        <a target="_blank" href="https://github.com/rosgas/50components-25days" class="btn-footer">GitHub Repository</a>
+      </div>
+      <a target="_blank" href="https://github.com/rosgas" class="gh-footer"><i class="fab fa-github fa-3x"></i></a>
+    </div>
+    <span>Header photo by <a href="https://unsplash.com/@ffstop?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Fotis Fotopoulos</a> on <a href="https://unsplash.com/s/photos/computers-programming?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
+    </div>
+  </footer>
   
   
   <script src="script.js"></script>
