--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="" alt="">
+      <img src="img/bg-8.png" alt="Form wave animation">
       <div class="card-content">
-        <h2 class="card-title">Project's title</h2>
-        <a target="_blank" href="" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <h2 class="card-title">Form wave animation</h2>
+        <a target="_blank" href="Form wave animation/pj-8.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
   </section>
