--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
         <a target="_blank" href="Form wave animation/pj-8.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
+    <div class="card">
+      <img src="img/bg-9.png" alt="Sound board">
+      <div class="card-content">
+        <h2 class="card-title">Sound board</h2>
+        <a target="_blank" href="Sound board/pj-9.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+      </div>
+    </div>
   </section>
 
   <footer>
