--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
         <a target="_blank" href="Sound board/pj-9.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
+    <div class="card">
+      <img src="img/bg-10.png" alt="Dad jokes">
+      <div class="card-content">
+        <h2 class="card-title">Dad jokes</h2>
+        <a target="_blank" href="Dad jokes/pj-10.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+      </div>
+    </div>
   </section>
 
   <footer>
