--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="img/bg-10.png" alt="Dad jokes">
+      <img src="img/bg-10.png" alt="Random quotes">
       <div class="card-content">
-        <h2 class="card-title">Dad jokes</h2>
-        <a target="_blank" href="Dad jokes/pj-10.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <h2 class="card-title">Random quotes</h2>
+        <a target="_blank" href="" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
   </section>
