--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <img src="img/bg-10.png" alt="Random quotes">
       <div class="card-content">
         <h2 class="card-title">Random quotes</h2>
-        <a target="_blank" href="" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+        <a target="_blank" href="Random quotes/pj-10.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
   </section>
