--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
         <a target="_blank" href="Random quotes/pj-10.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
+    <div class="card">
+      <img src="img/bg-11.png" alt="Event keyCodes">
+      <div class="card-content">
+        <h2 class="card-title">Event keyCodes</h2>
+        <a target="_blank" href="Event keyCodes/pg-11.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+      </div>
+    </div>
   </section>
 
   <footer>
