--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
         <a target="_blank" href="Event keyCodes/pg-11.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
       </div>
     </div>
+    <div class="card">
+      <img src="img/bg-12.png" alt="FAQ collapse">
+      <div class="card-content">
+        <h2 class="card-title">FAQ collapse</h2>
+        <a target="_blank" href="FAQ collapse/pj-12.html" class="btn-card"><i class="fas fa-play-circle"></i> Demo</a>
+      </div>
+    </div>
   </section>
 
   <footer>
